--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "connect-redis": "^6.0.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
