--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.3",
-    "mongoose-findorcreate": "^3.0.0",
-    "passport": "^0.5.2",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
-    "redis": "^4.0.2"
+    "passport-local": "^1.0.0"
   }
 }
